--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <p>You will get a score at the end and you can review each question. A passing mark of 75% (15 out of 20).</p>
       <p>Good luck!</p>
       <button id="btn-start" onClick="startQuiz();" class="btn btn-primary">Start the quiz</button>
-      <p class="mrgn-tp-lg"><a href="print-questions.asp">Print questions and answer key</a></p>
+      <p class="mrgn-tp-lg"><a href="print-questions.html">Print questions and answer key</a></p>
     </div>
     <div id="quiz-area" class="hidden">
       <section>
